// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`' jeRemY  ' not login individuel 1`] = `
Object {
  "err": "Unknown user",
}
`;

exports[`'admin' should login as admin 1`] = `
Object {
  "id": 4,
  "roles": Array [
    "admin",
    "user",
  ],
  "token": Any<String>,
  "type": "admin",
  "url": "/admin",
  "username": "admin",
}
`;

exports[`'inactive' not login an inactive user 1`] = `
Object {
  "err": "User is inactive",
}
`;

exports[`'jeremy' not login a registered user with wrong password 1`] = `
Object {
  "err": "Invalid password",
}
`;

exports[`'jeremy' should login as individuel 1`] = `
Object {
  "id": 1,
  "roles": Array [
    "individuel",
    "user",
  ],
  "token": Any<String>,
  "type": "individuel",
  "url": "/mandataires",
  "username": "jeremy",
}
`;

exports[`'kelly' should login as prepose 1`] = `
Object {
  "id": 2,
  "roles": Array [
    "prepose",
    "user",
  ],
  "token": Any<String>,
  "type": "prepose",
  "url": "/mandataires",
  "username": "kelly",
}
`;

exports[`'michael' not login an unregistered user 1`] = `
Object {
  "err": "Unknown user",
}
`;

exports[`'service1' should login as service 1`] = `
Object {
  "id": 3,
  "roles": Array [
    "service",
    "user",
  ],
  "token": Any<String>,
  "type": "service",
  "url": "/services",
  "username": "service1",
}
`;

exports[`'ti1' should login as ti 1`] = `
Object {
  "id": 5,
  "roles": Array [
    "ti",
    "user",
  ],
  "token": Any<String>,
  "type": "ti",
  "url": "/magistrats",
  "username": "ti1",
}
`;
